--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "pino": "^8.15.0",
+    "pino-pretty": "^10.2.0",
     "prisma": "^5.2.0",
     "typescript": "^5.2.2",
     "winston": "^3.10.0"
